[tool.poetry]
name = "yapo"
version = "0.1.3"
description = "Flexible and easy-to-use Python library for analysis & manipulation with financial & economic data"
authors = [
    "Alexander Myltsev",
    "Sergey Kikevich",
]
licence = "MIT"
readme = "README.rst"
homepage = "https://github.com/okama-io/yapo"
repository = "https://github.com/okama-io/yapo"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
PyContracts = "^1.8"
quandl = "^3.4"
serum = "^5.1"
pandas = "^0.24"

[tool.poetry.dev-dependencies]
freezegun = "^0.3.11"
pytest = "^4.5"
PyHamcrest = "^1.9"
flake8 = "^3.7"
codecov = "^2.0"
pytest-cov = "^2.7"
jupyterlab = "^0.35.6"
nbval = "^0.9.1"

[build-system]
requires = ["poetry >= 0.12, <1"]
python = ">=3.6, <4"
build-backend = "poetry.masonry.api"
